--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -3,7 +3,9 @@
 
 <div class="row">
   <div class="col">
-    <shared-search-box (onValue)="searchByRegion($event)" placeholder="Buscar por región"></shared-search-box>
+    <!-- <button *ngFor="">
+
+    </button> -->
   </div>
 </div>
 
