--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -2,10 +2,13 @@
 <hr>
 
 <div class="row">
-  <div class="col">
-    <!-- <button *ngFor="">
-
-    </button> -->
+  <div class="col text-center">
+    <button *ngFor="let region of regions"
+    class="btn m-1"
+    [ngClass]="{'btn-outline-primary': selectedRegion === region}"
+    (click)="searchByRegion(region)">
+      {{region}}
+    </button>
   </div>
 </div>
 
